fix: remove color property from main for improved readability

--- a/style.css
+++ b/style.css
@@ -472,7 +472,6 @@ main {
   padding: 5px 10px;
   margin: 5px;
   border-radius: 20px;
-  color: #003366;
   transition: color 0.2s ease;
   background-color: #ffffff66;
   box-shadow: 2px 2px 5px #000000;
